BaSP-week4-2022: finished the side bar and fix the font on mobile and tablet device

--- a/Semana-04/css/header.css
+++ b/Semana-04/css/header.css
@@ -18,7 +18,6 @@
 .header p{
     display: flex;
     align-items: center;
-    padding-left: 90px;
     width: 100%;
     color: #373867;
     font-family: "Roboto", sans-serif;
