--- a/Semana-04/css/style.css
+++ b/Semana-04/css/style.css
@@ -9,10 +9,24 @@ body{
     display: flex;
     justify-content: center;
 }
-
+.margin{
+    margin-left: 150px;
+}
 @media (max-width: 820px){
-    .nav{
+    .nav nav img{
         display: none;
+    }
+    .nav nav ul{
+        display: none;
+    }
+    .margin{
+        margin: 0px;
+    }
+    .header p{
+        padding-left: 100px;
+    }
+    .first-p{
+        font-size: 22px;
     }
 }
 @media (max-width: 480px){
@@ -26,5 +40,8 @@ body{
 @media (min-width: 820px){
     .container-logo .menu-logo{
         display: none;
+    }
+    .header p{
+        padding-left: 200px;
     }
 }
